Linking work for customer page

--- a/Vidly/Views/Home/Index.cshtml
+++ b/Vidly/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <h1>Customers</h1>
     <p class="lead">Customer</p>
     <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action">
-            John Smith
+        <a href="~/Customer/myCustomer" class="list-group-item list-group-item-action">
+           John Smith       
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             Hycomp
