--- a/Vidly/Views/Customer/Customer.cshtml
+++ b/Vidly/Views/Customer/Customer.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "Customer";
+    ViewData["Title"] = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <p>Customer page link is working</p>
 
