Created nav bar links

--- a/Vidly/Views/Home/Index.cshtml
+++ b/Vidly/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Customers</h1>
+    <h1>Welcome to Vidly</h1>
     <p class="lead">Customer</p>
     <div class="list-group">
         <a href="~/Customer/myCustomer" class="list-group-item list-group-item-action">
@@ -14,6 +14,9 @@
         </a>
         <a href="#" class="list-group-item list-group-item-action">
             BYU-I
+        </a>
+        <a href="@Url.Action("Index","Test")" class="list-group-item list-group-item-action">
+            Test link
         </a>
     </div>
 </div>
