--- a/Vidly/Views/Test/Index.cshtml
+++ b/Vidly/Views/Test/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewData["Title"] = "Customers";
+    ViewData["Title"] = "Test link page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewBag.Title</h2>
-<p>Customer page link is working</p>
+<p>The test page link is working</p>
 
